Replace deprecated methods, cleanup unused imports.